--- a/ems_ui/static/package.json
+++ b/ems_ui/static/package.json
@@ -43,17 +43,19 @@
                 "webpack-cli": "^4.2.0"
         },
         "dependencies": {
-                "node-loader": "^1.0.2",
                 "axios": "^0.22.0",
+                "babel-polyfill": "^6.26.0",
                 "bootstrap": "^5.1.2",
+                "node-loader": "^1.0.2",
                 "react": "^17.0.1",
                 "react-bootstrap": "^2.0.3",
                 "react-dom": "^17.0.1",
+                "react-icons": "^4.3.1",
                 "react-router-dom": "^5.2.0",
+                "react-scripts": "^4.0.1",
                 "react-spinners": "^0.11.0",
                 "react-toastify": "^8.0.3",
-                "styled-components": "^5.3.1",
-                "react-scripts": "^4.0.1"
+                "styled-components": "^5.3.1"
         },
         "babel": {
                 "presets": [
